inou/prp/tests/errors/adv_in_type_tuple.prp
/*
:name: adv_in_type_tuple
:type: error
:error: different types
:help: same type as the left operand
*/
// A tuple left operand against scalar elements is a type mismatch: `(1,2)` is a
// tuple, but each element of `(0,1,2,3,4)` is a scalar integer.
const x = (1, 2) in (0, 1, 2, 3, 4)
cassert(x)
